Added rpm support to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>webserver-maven-snapshot</id>
+            <url>http://192.168.56.4:8081/nexus/content/repositories/ServletMaven-snapshot/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <properties>
         <!-- All source files comes in UTF-8 -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,14 +35,78 @@
         <finalName>${project.artifactId}</finalName>
 
         <plugins>
-        <plugin>
+            <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
                 <source>1.8</source>
                 <target>1.8</target>
             </configuration>
-        </plugin>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.6</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ServletMaven-snapshot</serverId>
+                    <nexusUrl>http://192.168.56.4:8081/nexus/</nexusUrl>
+                </configuration>
+            </plugin>
+
+
+            <!-- RPM -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>rpm-maven-plugin</artifactId>
+                <version>2.1.4</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>attached-rpm</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <group>com.devops</group>
+                    <mappings>
+                        <mapping>
+                            <directory>/opt/tomcat/latest/webapp/</directory>
+                            <configuration>true</configuration>
+                            <filemode>755</filemode>
+                            <username>tomcat</username>
+                            <groupname>tomcat</groupname>
+                            <sources>
+                                <source>
+                                    <location>${project.basedir}/target/ServletMaven.war</location>
+                                </source>
+                            </sources>
+                        </mapping>
+                    </mappings>
+                    <preinstallScriptlet>
+                        <script>
+                            echo "Install start!"
+                            mkdir -p /opt/tomcat/latest/webapps/
+                        </script>
+                    </preinstallScriptlet>
+                    <postinstallScriptlet>
+                        <script>
+                            echo "Install done."
+                        </script>
+                    </postinstallScriptlet>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
